Fixed scrollbar

--- a/GUI_Try2222/wwwroot/css/site.css
+++ b/GUI_Try2222/wwwroot/css/site.css
@@ -125,7 +125,6 @@ body {
 }
 
 #main{
-    overflow:auto;
     padding-bottom: 100px;
 }
 
@@ -621,8 +620,7 @@ td {
         padding: 8px 16px
     }
 
-.w3-main,
-#main {
+.w3-main {
     transition: margin-left .4s
 }
 
